inject Parser.java in project