@@ -6,49 +6,48 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
-import ru.ianedw.avitoparserclienttelegrambot.client.ApiClient;
 import ru.ianedw.avitoparserclienttelegrambot.models.*;
+import ru.ianedw.avitoparserclienttelegrambot.parser.Parser;
 import ru.ianedw.avitoparserclienttelegrambot.services.PeopleService;
 import ru.ianedw.avitoparserclienttelegrambot.services.TargetsService;
 
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.concurrent.TimeUnit;
 
 @Component
 public class UpdateSender {
     Logger log = LoggerFactory.getLogger(UpdateSender.class);
-    private final ApiClient apiClient;
+    private final Parser parser;
+    private final ClientBot clientBot;
     private final PeopleService peopleService;
     private final TargetsService targetsService;
-    private final ClientBot clientBot;
     private Map<Integer, Map<String, Post>> availablePosts;
     private Map<Integer, List<Person>> targetIdsWithPeople;
+    private List<Target> targets;
 
     @Autowired
-    public UpdateSender(ApiClient apiClient, PeopleService peopleService, TargetsService targetsService, ClientBot clientBot) {
-        this.apiClient = apiClient;
+    public UpdateSender(Parser parser, ClientBot clientBot, PeopleService peopleService, TargetsService targetsService) {
+        this.parser = parser;
+        this.clientBot = clientBot;
         this.peopleService = peopleService;
         this.targetsService = targetsService;
-        this.clientBot = clientBot;
         availablePosts = new HashMap<>();
-        loadAvailablePosts();
-        updateTargetMapPeople();
+        refreshAvailablePosts();
     }
 
-    @Scheduled(initialDelay = 2000, fixedDelay = 5000)
+    @Scheduled(initialDelay = 2000, fixedDelay = 15000)
     public void sendUpdateToPeople() {
         try {
-            updateTargetMapPeople();
-            Update newUpdate = apiClient.getNewUpdate();
-            Map<Integer, Map<String, Post>> newTargetPosts = newUpdate.getTargetPosts();
+            updateTargetsMapPeople();
+            Map<Integer, Map<String, Post>> newAvailablePosts = parser.getAvailablePosts(targets);
 
-            for (Integer targetId : newTargetPosts.keySet()) {
+            for (Integer targetId : newAvailablePosts.keySet()) {
                 log.info("Сравнение апдейтов с targetId: " + targetId);
                 if (!availablePosts.containsKey(targetId)) {
-                    loadAvailablePosts(targetId, newTargetPosts.get(targetId));
+                    loadAvailablePosts(targetId, newAvailablePosts.get(targetId));
                 }
 
-                List<Post> newPosts = getNewPosts(newTargetPosts.get(targetId), availablePosts.get(targetId));
+                List<Post> newPosts = getNewPosts(newAvailablePosts.get(targetId), availablePosts.get(targetId));
 
                 for (Post newPost : newPosts) {
                     String message = "Новое объявление для цели c id -  " + targetId + "\n";
@@ -65,16 +64,23 @@ public class UpdateSender {
                 }
             }
 
-            availablePosts = newUpdate.getTargetPosts();
+            availablePosts = newAvailablePosts;
         } catch (TelegramApiException ignored) {
         }
     }
 
-    public void loadAvailablePosts() {
-        Map<Integer, Map<String, Post>> newUpdate = apiClient.getNewUpdate().getTargetPosts();
-        for (Integer integer : newUpdate.keySet()) {
+    @Scheduled(timeUnit = TimeUnit.HOURS, fixedDelay = 3)
+    private void refreshAvailablePosts() {
+        updateTargetsMapPeople();
+        loadAvailablePosts();
+    }
+
+
+    private void loadAvailablePosts() {
+        Map<Integer, Map<String, Post>> newAvailablePosts = parser.loadAvailablePosts(targets);
+        for (Integer integer : newAvailablePosts.keySet()) {
             if (!availablePosts.containsKey(integer)) {
-                loadAvailablePosts(integer, newUpdate.get(integer));
+                loadAvailablePosts(integer, newAvailablePosts.get(integer));
             }
         }
     }
@@ -95,15 +101,32 @@ public class UpdateSender {
         return result;
     }
 
-    private void updateTargetMapPeople() {
-        Map<Integer, List<Person>> map = peopleService.getTargetMapPeople();
+    private void updateTargetsMapPeople() {
+        List<Person> people = peopleService.getAllPeople();
+        Map<Integer, List<Person>> map = new HashMap<>();
+
+        for (Person person : people) {
+            for (Target target : person.getTargets()) {
+                List<Person> targetPeople;
+                if (map.containsKey(target.getId())) {
+                    targetPeople = map.get(target.getId());
+                } else {
+                    targetPeople = new ArrayList<>();
+                }
+                targetPeople.add(person);
+                map.put(target.getId(), targetPeople);
+            }
+        }
 
         List<Integer> targetIdsToRemove = map.keySet().stream()
-                .filter(integer -> map.get(integer).size() == 0)
-                .collect(Collectors.toList());
+                .filter(integer -> map.get(integer).size() == 0).toList();
         targetIdsToRemove.forEach(map::remove);
         targetIdsToRemove.forEach(targetsService::delete);
-        apiClient.removeTargetsFromServer(targetIdsToRemove);
         targetIdsWithPeople = map;
+        updateTargets();
+    }
+
+    private void updateTargets() {
+        targets = targetsService.getAllTargets();
     }
 }
